[package]
name = "Aho"
version = "0.1.0"
edition = "2021"

[lib]
name = "adjust_last_flame_rs"
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "complexcity-amount"
path = "src/complexity.rs"


[dependencies]
complexity = "0.2.0"
syn = "1.0.89"

[dependencies.windows]
version = "0.34.0"
features = ["Win32_Foundation","Win32_Graphics_Gdi"]