[package]
name = "adjust_last_flame_rs"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
name = "adjust_last_flame_rs"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
encoding_rs = "0.8.30"

[dependencies.windows-sys]
version = "0.34.0"
features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_WindowsProgramming",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_SystemServices",
    "Win32_System_Memory",
    "Win32_System_IO",
    "Win32_UI_WindowsAndMessaging",
]

[profile.release]
opt-level = "z"
debug = false
strip = true
debug-assertions = false
overflow-checks = false
lto = true
panic = "unwind"
incremental = false
codegen-units = 1
